--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quiz_baki_ts",
+  "name": "quiz_baki_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -45,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3080"
 }
